...
  4: "Pets allowed",
  5: "Room service",
  6: "Meeting/banquet facilities",
  7: "Bar",
  8: "24-hour front desk",
  9: "Tennis court",
  10: "Sauna",
  11: "Fitness center",
  12: "Golf course",
  14: "Garden",
  15: "Terrace",
  16: "Non-smoking rooms",
  17: "Airport shuttle",
  19: "Fishing",
  20: "Business center",
  21: "Babysitting/child services",
  22: "Laundry",
  23: "Dry cleaning",
  24: "Continental breakfast",
  25: "Facilities for disabled guests",
  26: "Skiing",
  27: "Barber/beauty shop",
  28: "Family rooms",
  29: "Games room",
  30: "Casino",
  43: "Breakfast in the room",
  44: "Ironing service",
  46: "Free Parking",
...
